fix image jumping issue by setting width

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
 #container {
   margin-top: 30pt;
   margin-left: 8pt;
+  width: 580pt;
+  height: 360pt;
 }
 h1 {
   font-family: 'Exo', sans-serif;
